[package]
name = "uring_bpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros", "sync"] }
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring.git" }
